it's awsome learning method

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hello World</title>
   </head>
   <body>
-      Say hello to git.!
+      <h1>Say hello to git.!</h1>
+      <h3>it's awsome learing method.</h3>
   </body>
 </html>
