comming for conflicts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
       <h1>Say hello to git.!</h1>
-      <h2>it's awsome learing method.</h2>
+      <pre>it's awsome learing method.</pre>
   </body>
 </html>
