wea re on issue3

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
       <h1>Say hello to git.!</h1>
       <h3>it's awsome learing method.</h3>
+      <pre>This is to learn git</pre>
   </body>
 </html>
