we are on master

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   <body>
       <h1>Say hello to git.!</h1>
       <h3>it's awsome learing method.</h3>
+      <pre>we are on master</pre>
+      <section>
+        <h2>heading</h2>
+        <p>content</p>
+      </section>
   </body>
 </html>
