--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section>
         <h2>heading</h2>
         <p>content</p>
-      <p>we are merging master to issue</p>      
+      <p>we are merging master to issue  <span> ; larning about the project</span>  </p>
       </section>
   </body>
 </html>
