--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       <section>
         <h2>heading</h2>
         <p>content</p>
+
       <p>we haven't done anything...!</p>
+
+      <p>this is beta release</p>
+      <p>this is beta release</p>
+      <p>this is beta release</p>
+
       </section>
   </body>
 </html>
