--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h2>heading</h2>
         <p>content</p>
       <p>this is beta release</p>
+      <p>this is beta release</p>
+      <p>this is beta release</p>
       </section>
   </body>
 </html>
